syntax = "proto3";

option java_multiple_files = true;
option java_package = "es.um.sisdist.backend.grpc";

package es.um.sisdist.backend.grpc;

service GrpcService
{
    rpc mapReduce(MapReduceRequest) returns (MapReduceResponse);
}

message MapReduceRequest
{
	string map = 1;
	string reduce = 2;
	string in_db = 3;
	string out_db = 4;
	string userID = 5;
}

message MapReduceResponse
{
	string mrID = 1;
}

